modify security localstorage to cookie